--- a/COMP229-F2022-WEEK3-402/app/views/content/about.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/about.ejs
@@ -1,3 +1,4 @@
 <h1> <%= title %>  </h1>
 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea consequatur asperiores eligendi, expedita ab laborum, aperiam officiis iusto commodi itaque aliquam repudiandae, hic non cum illo nihil a qui repellat?</p>
+<h3>a carpentry business</h3>
+<p>in business for 4+ years. taking care of all of your interrior design and construction from A to Z.</p>
