--- a/COMP229-F2022-WEEK3-402/app/views/content/contact.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/contact.ejs
@@ -1,3 +1,6 @@
 <h1> <%= title %>  </h1>
-
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae numquam cupiditate optio eos perspiciatis enim facilis aliquam reiciendis debitis. Officiis, aliquam. Voluptatibus magni necessitatibus quo quos officiis quod, magnam maiores.
+<p>
+ Darshmeen Dhillon
+@ centennial college
+ddhillo7@my.centennialcollege.ca   
+</p>
