testing again if errors are fixed

--- a/COMP229-F2022-WEEK3-402/app/views/components/header.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/components/header.ejs
@@ -27,5 +27,6 @@
           </li> 
         </ul>
       </div>
+      <p>&copy; Darshmeen Dhillon, 300689994, Date 7 oct 2022</p>
     </div>
   </nav>
