--- a/COMP229-F2022-WEEK3-402/app/views/content/contact.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/contact.ejs
@@ -1,6 +1,10 @@
 <h1> <%= title %>  </h1>
+
+<div>
 <p>
  Darshmeen Dhillon
 @ centennial college
 ddhillo7@my.centennialcollege.ca   
 </p>
+
+</div>
