--- a/COMP229-F2022-WEEK3-402/app/views/content/home.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/home.ejs
@@ -1,2 +1,9 @@
 <h1> <%= title %>  </h1>
+<h2>Mission statment</h2>
+<h3>To help create what customers want regardless of the scope.</h3>
+<br>
 
+
+
+
+</div>
