--- a/COMP229-F2022-WEEK3-402/app/views/content/projects.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/projects.ejs
@@ -1,1 +1,17 @@
 <h1> <%= title %>  </h1>
+
+<p></p>
+<h2>Gallary</h2>
+<div width = 500px>
+    <p>the owner wanted a place for his kids to play</p>
+<img src=".../../../../../public/content/images/first playground set.HEIC">
+
+
+<p>owner wanted to spend more time outside and had this outdoor kitchen built</p>
+<img src=".../../../../../public//content/images/out door kitchen.JPG">
+
+<p>owner wanted a durable water slide under a small budget.</p>
+<img src=".../../../../../public//content/images/water slide.jpg">
+
+<p>owner wanted a wheel chair accessibility</p>
+<img src=".../../../../../public//content/images/accessibility ramp.jpg">
