--- a/COMP229-F2022-WEEK3-402/app/views/content/services.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/services.ejs
@@ -1,1 +1,8 @@
 <h1> <%= title %>  </h1>
+<p>
+    <ul>
+        <li>web development</li>
+        <li>web development</li>
+        <li> more coming soon...</li>
+    </ul>
+</p>
