--- a/COMP229-F2022-WEEK3-402/app/views/components/footer.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/components/footer.ejs
@@ -1,5 +1,6 @@
 <nav class="navbar fixed-bottom bg-light">
     <div class="container-fluid">
-      <h5 id="copyright">&copy; Copyright 2022</h5>
+      <h5 id="copyright">&copy; Copyright 2022 <br>
+      Darshmeen Dhillon, 300689994</h5>
     </div>
   </nav>
