--- a/COMP229-F2022-WEEK3-402/app/views/content/about.ejs
+++ b/COMP229-F2022-WEEK3-402/app/views/content/about.ejs
@@ -1,15 +1,15 @@
 <h1> <%= title %>  </h1>
 
-
-<div>
 <img src=".../../../../../public/content/images/me.JPG">
+<div>
+
 
 <h3>I have always had a interest in technology and building stuff.</h3>
 <p>a spent a good amount of my life practicing carpentry and while i love it, i could not shake my interest in computer and networking technologies. <br>
     i see great power and enjoyment which is what brings to this stage in mylife whee im pursuing a career in softwar technology. <br>
 I enjoy all sports especially related to water such as paddle boarding.
-<img src=".../../../../../public/content/images/paddleboarding.jpg">
-</p>
+
+</p><img src=".../../../../../public/content/images/paddleboarding.jpg">
 
 <embed src=".../../../../../public/content/files/DARSHMEEN DHILLON.pdf">
 </div>
